--- a/public/template.css
+++ b/public/template.css
@@ -11,7 +11,7 @@ body {
     border-top-right-radius: 15px;
     height: 600px;
     width: 1200px;
-    margin-top: 85px;
+    margin-top: 50px;
     border: 3px solid;
     border-color: white;
 }
@@ -86,6 +86,31 @@ body {
     height: 600px;
     width: 1140px;
     margin-left: 105px;
-    border: 3px solid;
+    border-bottom: 3px solid;
+    border-left: 3px solid;
+    border-right: 3px solid;
     border-color: white;
 }
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-footer{
+    display: flex;
+    align-items: center;
+}
+
+.logo-footer p{
+    margin-left: -20px;
+    color: white;
+}
+
+.sosmed-footer{
+    margin-right: 30px;
+    font-size: 25px;
+    gap: 3rem;
+}
+
