--- a/public/landing.css
+++ b/public/landing.css
@@ -36,9 +36,28 @@
 
 .row2{
     display: flex;
-    align-items: center;
+    justify-content:center;
     font-size: 100px;
 }
 .row2 header{
     margin: 0px;
+}
+.row2 img{
+    position:relative;
+    width: 100px;
+    height: 128px;
+    gap: 100px;
+    flex-shrink: 0;
+
+}
+.row3{
+    display:flex ;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.row4{
+    display: flex;
+    justify-content: center;
+    font-size: 100px;
 }
